# tiko_test_project

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  run.sh
events/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
events/migrations/: 0001_initial.py  0002_event_capacity.py
tests/: conftest.py
tests/integration/: events_test.py  tokens_auth_test.py
tests/integration/utils/: auth_utils.py  fixtures.py
tikoProject/: asgi.py  settings.py  urls.py  wsgi.py
tokens_auth/: apps.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
